--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -1,43 +1,144 @@
 {
   
   "name": "contact-app",
+  
   "version": "0.1.0",
+  
   "private": true,
+  
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.2",
-    "react": "^18.2.0",
-    "react-cropper": "^2.3.3",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.19.0",
-    "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4"
+  
+    
+  "@craco/craco": "^7.1.0",
+  
+    
+  "@testing-library/jest-dom": "^5.17.0",
+  
+    
+  "@testing-library/react": "^13.4.0",
+  
+    
+  "@testing-library/user-event": "^13.5.0",
+  
+    
+  "axios": "^1.6.2",
+  
+    
+  "crypto-browserify": "^3.12.0",
+  
+    
+  "dropbox": "^10.34.0",
+  
+    
+  "dropbox-v2-api": "^2.5.10",
+  
+    
+  "react": "^18.2.0",
+  
+    
+  "react-cropper": "^2.3.3",
+  
+    
+  "react-dom": "^18.2.0",
+  
+    
+  "react-google-drive-picker": "^1.2.2",
+  
+    
+  "react-router-dom": "^6.19.0",
+  
+    
+  "react-scripts": "5.0.1",
+  
+    
+  "react-toastify": "^9.1.3",
+  
+    
+  "util": "^0.12.5",
+  
+    
+  "web-vitals": "^2.1.4"
+  
   },
+  
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  
+    
+  "start": "react-scripts start",
+  
+    
+  "build": "react-scripts build",
+  
+    
+  "test": "react-scripts test",
+  
+    
+  "eject": "react-scripts eject"
+  
   },
+  
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  
+    
+  "extends": [
+  
+    
+    
+  "react-app",
+  
+    
+    
+  "react-app/jest"
+  
+    
+  ]
+  
   },
+  
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  
+    
+  "production": [
+  
+    
+    
+  ">0.2%",
+  
+    
+    
+  "not dead",
+  
+    
+    
+  "not op_mini all"
+  
+    
+  ],
+  
+    
+  "development": [
+  
+    
+    
+  "last 1 chrome version",
+  
+    
+    
+  "last 1 firefox version",
+  
+    
+    
+  "last 1 safari version"
+  
+    
+  ]
+  
+  },
+  
+  "devDependencies": {
+  
+    
+  "webpack-cli": "^5.1.4"
+  
   }
 }
