--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -12,6 +12,18 @@
   "@craco/craco": "^7.1.0",
   
     
+  "@fortawesome/fontawesome-free": "^6.4.2",
+  
+    
+  "@fortawesome/fontawesome-svg-core": "^6.4.2",
+  
+    
+  "@fortawesome/free-solid-svg-icons": "^6.4.2",
+  
+    
+  "@fortawesome/react-fontawesome": "^0.2.0",
+  
+    
   "@testing-library/jest-dom": "^5.17.0",
   
     
@@ -31,6 +43,9 @@
   
     
   "dropbox-v2-api": "^2.5.10",
+  
+    
+  "js-cookie": "^3.0.5",
   
     
   "react": "^18.2.0",
