--- a/contact-app/package.json
+++ b/contact-app/package.json
@@ -45,10 +45,16 @@
   "dropbox-v2-api": "^2.5.10",
   
     
+  "file-saver": "^2.0.5",
+  
+    
   "js-cookie": "^3.0.5",
   
     
   "react": "^18.2.0",
+  
+    
+  "react-bootstrap": "^2.9.1",
   
     
   "react-cropper": "^2.3.3",
@@ -72,7 +78,10 @@
   "util": "^0.12.5",
   
     
-  "web-vitals": "^2.1.4"
+  "web-vitals": "^2.1.4",
+  
+    
+  "xlsx": "^0.18.5"
   
   },
   
